# SeatCraft

./: .gitignore  CMakeLists.txt  DEPS  README.md  install_tools.sh
SeatCraftCore/SeatCraftCore/: SeatCraftCore.h  core
SeatCraftCore/SeatCraftCore.xcodeproj/: project.pbxproj
SeatCraftCore/SeatCraftCore/core/: SeatCraftCoreApp.cpp  SeatCraftCoreApp.hpp
SeatCraftCore/SeatCraftCore/core/drawers/: Drawer.cpp  Drawer.hpp  GridBackgroundLayerTree.cpp  GridBackgroundLayerTree.hpp  SeatAreaLayer.cpp  SeatAreaLayer.hpp  SeatLayerTree.cpp  SeatLayerTree.hpp  SeatMinimapDrawer.cpp  SeatMinimapLayerTree.cpp  SeatMinimapLayerTree.hpp
SeatCraftCore/SeatCraftCore/core/renderer/: SeatCraftCoreRenderer.cpp  SeatCraftCoreRenderer.hpp
SeatCraftCore/SeatCraftCore/core/svg/: ConvertSVGLayer.cpp  SVGLoader.cpp
SeatCraftCore/SeatCraftCore/core/ui/: ElasticZoomPanController.cpp  ElasticZoomPanController.hpp  GestureController.hpp
SeatCraftCore/SeatCraftCore/platform/: ios
SeatCraftCore/SeatCraftCoreExample/: AppDelegate.h  AppDelegate.m  KKChooseSeatViewController.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
SeatCraftCore/SeatCraftCoreExample/Base.lproj/: Main.storyboard
android/: SeatCraftAppPicker.def
android/SeatCraftAppPickerExample/: settings.gradle.kts
android/SeatCraftAppPickerExample/SeatCraftAppPicker/: build.gradle.kts
android/SeatCraftAppPickerExample/app/: build.gradle.kts
android/SeatCraftAppPickerExample/gradle/: libs.versions.toml
cmake/: utils.cmake
include/SeatCraft/common/: common_macro.h
include/SeatCraftDesignModel/deserialize/: Deserializeable.h  JSONDeserialize.hpp
include/SeatCraftDesignModel/serialize/: SVGSerialize.hpp  Serializable.h
include/SeatCraftEditorCore/app/: SeatCraftEditorCoreApp.hpp
include/SeatCraftEditorCore/common/: defines.h
include/SeatCraftEditorCore/renderer/: RendererBackend.hpp  SeatCraftEditorCoreRenderer.hpp
ios/: .gitignore  SeatCraftAppPicker.lds  gen_ios  gen_simulator
ios/SeatCraft.xcworkspace/: contents.xcworkspacedata
ios/SeatCraftAppPickerExample/: Config.xcconfig
ios/SeatCraftAppPickerExample/SeatCraftAppPickerExample/: AppDelegate.h  AppDelegate.m  KKChooseSeatViewController.h  KKChooseSeatViewController.m  KKChooseSeatViewController.xib  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/SeatCraftAppPickerExample/SeatCraftAppPickerExample.xcodeproj/: project.pbxproj
qt/: gen_editer_app  gen_editor_app
src/: .clang-format
src/app_picker/: CMakeLists.txt  module.modulemap
src/app_picker/core/: EdgeInsets.cpp  EdgeInsets.h  FileReader.cpp  FileReader.h  SeatCraftCoreApp.cpp  SeatCraftCoreApp.hpp  SeatStatusKey.h
src/app_picker/core/drawers/: Drawer.cpp  GridBackgroundLayerTree.cpp  GridBackgroundLayerTree.hpp  SeatLayerTree.cpp  SeatLayerTree.hpp  SeatMinimapLayerTree.cpp  SeatMinimapLayerTree.hpp
src/app_picker/core/renderer/: SeatCraftCoreRenderer.cpp  SeatCraftCoreRenderer.hpp
src/app_picker/core/svg/: ConvertSVGLayer.cpp  ConvertSVGLayer.hpp  SVGDataProvider.cpp  SVGDataProvider.h  SVGLoader.cpp  SVGLoader.hpp
src/app_picker/core/thread/: UIThreadScheduler.h  WorkThread.cpp  WorkThread.h
src/app_picker/core/ui/: ElasticZoomPanController.cpp  ElasticZoomPanController.hpp  SeatCraftViewCore.cpp  SeatCraftViewCore.hpp
src/app_picker/platform/android/jni/: AndroidFileReader.cpp  AndroidFileReader.h  JNILoader.cpp
src/app_picker/platform/android/renderer/: AndroidRendererBackend.cpp  AndroidRendererBackend.h
src/app_picker/platform/android/thread/: AndroidUIThreadScheduler.cpp  AndroidUIThreadScheduler.h
src/app_picker/platform/android/ui/: SeatCraftPickerView.cpp  SeatCraftPickerView.h
src/app_picker/platform/ios/: KKSeatCraftCoreBackendView.m  KKSeatCraftCoreSeatStatusSvgPathMap+Private.h  KKSeatCraftCoreSeatStatusSvgPathMap.mm  KKSeatCraftCoreView.mm  UIScrollViewZoomPanController.h  UIScrollViewZoomPanController.mm
src/app_picker/platform/ios/renderer/: IOSRendererBackend.h  IOSRendererBackend.mm
src/app_picker/platform/ios/thread/: IOSUIThreadScheduler.h  IOSUIThreadScheduler.mm
src/app_picker/platform/web/: binding.cpp
src/app_picker/platform/web/renderer/: WebRendererBackend.cpp  WebRendererBackend.h
src/app_picker/platform/web/thread/: WebUIThreadScheduler.cpp  WebUIThreadScheduler.h
src/core/core/: SeatCraftCoreApp.cpp  SeatCraftCoreApp.hpp
src/core/core/drawers/: ConicGradientDrawer.cpp  (+9 more)
src/design_model/: CMakeLists.txt
src/design_model/src/: dummy.cpp
src/design_model/src/binary/: SeatCraftFileHeader.h
src/design_model/src/deserialize/: JSONDeserialize.cpp
src/design_model/src/layer/: Layer.cpp  Layer.hpp  LayerType.h
src/design_model/src/serialize/: SVGSerialize.cpp
src/editor/: CMakeLists.txt
src/editor/src/: main.cpp
src/editor_app/: CMakeLists.txt
src/editor_app/assets/qml/: CreateProjectWindow.qml  EditerPage.qml  EditorPage.qml  EditorWindow.qml  Main.qml  MainWindow.qml  WelcomePage.qml
src/editor_app/src/: main.cpp
src/editor_app/src/event/: DockHandler.cpp  DockHandler.h
src/editor_app/src/renderder/: QTRendererBackend.cpp  QTRendererBackend.h
src/editor_app/src/utils/: WindowUtils.cpp  WindowUtils.h
src/editor_app/src/view/: SeatCraftEditorCoreView.cpp  SeatCraftEditorCoreView.h
src/editor_core/: CMakeLists.txt
src/editor_core/app/: SeatCraftEditorCoreApp.cpp
src/editor_core/drawers/: Drawer.cpp  Drawer.hpp  GridBackgroundLayerTree.cpp  GridBackgroundLayerTree.hpp  UserDesignLayerTree.cpp  UserDesignLayerTree.hpp
src/editor_core/renderer/: SeatCraftEditorCoreRenderer.cpp
tools/design_model_cli/: CMakeLists.txt
tools/design_model_cli/src/: main.cpp
web/: build.sh  emscripten.rb
web/app_picker_example/: .gitignore  package-lock.json  package.json  rollup.config.js  server.js
web/app_picker_example/src/: GestureManager.ts  common.ts  index.html  index.ts
web/seatcraft_app_picker/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.type.json
web/seatcraft_app_picker/src/: binding.ts  types.ts
(+39 files in other folders)
